# toyml

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  pyproject.toml  requirements.txt  setup.py  setup_win_env.bat
native/: CMakeLists.txt  embree_wrapper.cpp
py/: dsl.py  embree.py  utils.py
scripts/: fetch_bindeps.py
tests/: test_iadb.py  test_iadb_2.py  test_iadb_3.py  test_pygltf.py  test_torch.py  test_wgpu.py  test_wgpu_conv.py
tests/sd/: test_iadb_3.py
tests/wgpu/: test_wgpu_imgui.py  test_wgpu_qt.py  test_wgpy_glfw.py
toyml/: dds.py  utils.py
webgpu/: index.html  mlp_compression.html
webgpu/assets/: mlp_compression.wgsl
